--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>Twittet</title>
+    <title>Twitter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
